<resources>
    <string name="app_name">Приложение БонусОк</string>
    <string name="welcome_text">Добро пожаловать в нашу программу лояльности Бонусок!</string>
    <string name="registration_text">Зарегистрироваться</string>
    <string name="login_text">Войти</string>
    <string name="reg1_text">Введите свой номер телефона</string>
    <string name="reg2_text">К которому будет привязана ваша бонусная карта</string>
    <string name="reg3_text">Номер телефона:</string>
    <string name="phone_editView">__________</string>
    <string name="sms_code_text">Отправить СМС-код</string>
    <string name="confirm_login_text">Мы отправили СМС-код, чтобы вы подтвердили свой номер телефона</string>
    <string name="sms_password_editView">SMS-пароль</string>
    <string name="sign_in_text">Войти</string>
    <string name="help_text">Не пришел код?</string>
    <string name="send_sms_text"><u>Отправить повторно</u></string>
    <string name="auth_text">Введите свой номер телефона</string>
    <string name="auth2_text">Сотовый номер, на который привязана бонусная карта</string>
    <string name="auth1_text">Введите свой номер телефона</string>
    <string name="get_code_text">Получить код</string>
    <string name="confirm_code_editView">Код подтверждения</string>
    <string name="edit_photo">Редактировать данные</string>
    <string name="about_us1_text">О приложении</string>
    <string name="about_us2_text">Данное мобильное приложение - это единая программа лояльности для всех владельцев малого бизнеса. С его помощью вы сможете без труда воспользовать QR кодом для получения скидки, а также узнать о действующих акциях.</string>
    <string name="about_us3_text">Если вы уже зарегистрированы в программе лояльности, просто введите свой номер телефона для входа в личный кабинет.</string>
    <string name="number_user_text">Новый пользователь</string>
    <string name="number_bonus_text">Количество бонусов на счете : </string>
    <string name="qr_scan_text">Поднесите QR-код для сканирования</string>
    <string name="discount_text">Список акций</string>
    <string name="save_text">Сохранить</string>
    <string name="edit_inform">Редактировать данные</string>
    <string name="menu_discount_text">Акции</string>
    <string name="menu_about_us_text">О приложении</string>
    <string name="menu_exit_text">Выход из профиля</string>
    <string name="description_discount_text">Данная акция проходит во всех сети кофеен ООО при предоставлении карты лояльности с 9:00 до 11:00</string>
    <string name="name_discount_text">Скидка 10% на утренний кофе</string>
    <string name="date_discount_text">Акция действует с 15.05 по 15.07</string>
    <string name="number_bonuses_text">100</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="exit_text">Выйти из приложения</string>
    <string name="registration_activity_title">Регистрация</string>
    <string name="confirm_activity_title">Подтверждение входа</string>
    <string name="student_activity_title">Авторизация</string>
    <string name="editing_profile_activity_title">Редактирование профиля</string>
    <string name="profile_activity_title">Профиль</string>
    <string name="menu_profile_text">Профиль</string>
    <string name="menu_admin_text">Админ</string>

    //AuthorizationActivity
    <string name="input_phone_number">Введите номер телефона</string>
    <string name="user_is_unregistered">Пользователь с таким номером не зарегистрирован</string>
    <string name="input_sms_code">Введите код из смс</string>
    <string name="invalid_code">Код неверный</string>
    <string name="login_error">Ошибка входа</string>

    //RegistrationActivity
    <string name="invalid_phone_number">Некорректный номер телефона</string>
    <string name="user_already_exist">Данный номер уже зарегистрирован</string>

    //EditingProfileActivity
    <string name="birthday_editView">Дата рождения</string>
    <string name="name_user_editView">Имя пользователя</string>
    <string name="surname_user_editView">Фамилия пользователя</string>
    <string name="email_user_editView">Электронная почта</string>

    //AdminFragment
    <string name="read_qr_code">Считать QR-код</string>
    <string name="bonus_count">Количество бонуов:</string>
    <string name="delete_bonus">Списать бонусы</string>
    <string name="add_bonus">Начислить бонусы</string>
    <string name="skan_qr">Отсканируйте QR-код!</string>
    <string name="bonus_added">Бонусы начислены</string>
    <string name="invalid_bonus_add">Ошибка зачисления</string>
    <string name="bonus_deleted">Бонусы списаны</string>
    <string name="invalid_bonus_delete">Ошибка зачисления</string>
    <string name="card_code_qr_result">Номер карты пользователя: </string>
    <string name="card_code_qr_fail">Ошибка получения номера карты</string>
</resources>