<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="30dp"
    android:paddingLeft="20dp"
    android:orientation="vertical"
    tools:context=".ConfirmationActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_login_text"
        android:gravity="center"
        android:textSize="24sp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="20dp"/>

     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="number"
         android:textSize="20sp"
         android:hint="@string/sms_password_editView"
         android:layout_marginBottom="10dp"
         android:layout_marginRight="20dp"/>

     <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textSize="20sp"
        android:layout_marginRight="20dp"
        android:id="@+id/btn_enter1_profile"
        android:text="@string/sign_in_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help_text"
        android:textSize="18dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_sms_text"
        android:textSize="18dp"
        android:textAllCaps="false"
        android:textColor="#57a0d4"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_marginTop="10dp"/>
    </LinearLayout>
</LinearLayout>