<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:orientation="vertical">

    <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:paddingRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

       <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/qr_scan_text"
          android:textSize="24sp"
          android:gravity="center"
          android:layout_marginTop="30dp"/>

        <ImageView
            android:id="@+id/qr"
            android:layout_width="367dp"
            android:layout_height="333dp"
            android:layout_gravity="center" />

         <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/number_bonus_text"
           android:textSize="24sp"
           android:gravity="center"
           android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/bonusQuantity"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/number_bonuses_text"
          android:layout_gravity="center"
          android:textSize="40dp"
          android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/user_name_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:text="@string/number_user_text"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_edit_profile"
            android:layout_width="wrap_content"
            android:layout_height="58dp"
            android:layout_gravity="center"
            android:layout_marginBottom="40dp"
            android:text="@string/edit_inform"
            android:textSize="18sp" />
    </LinearLayout>
 </ScrollView>
</RelativeLayout>

</FrameLayout>