<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/bonus_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_text"
        android:gravity="center"
        android:textSize="30sp"
        android:layout_marginBottom="40dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textSize="18sp"
        android:text="@string/registration_text"
        android:id="@+id/btn_registration"
        android:layout_marginBottom="10dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textSize="18sp"
        android:text="@string/login_text"
        android:id="@+id/btn_enter"/>

</LinearLayout>