<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:mask="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="30dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:orientation="vertical"
    tools:context=".RegistrationActivity"
    tools:ignore="ExtraText">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reg1_text"
        android:textSize="24sp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reg2_text"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reg3_text"
        android:textSize="20sp"
        android:layout_marginBottom="10dp"/>

<!--     <EditText-->
<!--         android:layout_width="match_parent"-->
<!--         android:layout_height="wrap_content"-->
<!--         android:inputType="phone"-->
<!--         android:textSize="20sp"-->
<!--         android:hint="@string/phone_editView"-->
<!--         android:layout_marginBottom="30dp"/>-->

    <br.com.sapereaude.maskedEditText.MaskedEditText
        android:id="@+id/phone_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:typeface="monospace"
        mask:allowed_chars="0123456789"
        mask:mask="+7(###)###-##-##"
        android:hint="9000000000"
        app:keep_hint="true"
    />

     <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textSize="20sp"
        android:id="@+id/btn_sending_sms"
        android:text="@string/sms_code_text" />

</LinearLayout >