<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/read_qr_code_btn"
            android:layout_width="247dp"
            android:layout_height="75dp"
            android:layout_marginTop="35dp"
            android:text="@string/read_qr_code"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/card_code_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:textSize="24sp"></TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:text="@string/bonus_count"
            android:textSize="24sp"></TextView>

        <EditText
            android:id="@+id/bonus_count_text"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:inputType="number"></EditText>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/delete_bonus_btn"
                android:layout_width="155dp"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:onClick="deleteBonusOnClick"
                android:text="@string/delete_bonus"
                android:textSize="18sp" />

            <Button
                android:id="@+id/add_bonus_btn"
                android:layout_width="155dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:onClick="addBonusOnClick"
                android:text="@string/add_bonus"
                android:textSize="18sp">

            </Button>

        </LinearLayout>

    </LinearLayout>
</FrameLayout>